# instance_whistle

./: .gitignore  README.md  pyproject.toml
configs/: cascade-mask-rcnn_r50_fpn_ms-3x_whistle.py  detr_r50_8xb2-150e_whistle.py  htc_r50_fpn_20e_whistle.py  mask-rcnn_r50-caffe_fpn_ms-3x_whistle.py  mask-rcnn_r50-caffe_fpn_ms-3x_whistle_median.py  mask2former_r50_8xb2-lsj-50e_coco.py  mask2former_r50_8xb2-lsj-50e_whistle_cross.py  mask2former_r50_8xb2-lsj-50e_whistle_cross_median.py  mask2former_sam.py  mask2former_sam_lrd8.py  mask2former_sam_lrd8_median.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle_cross.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle_noresize.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle_noresize_cls11.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle_noresize_cls11_median.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle_noresize_cls11_median_empty.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle_noresize_cls11_median_focalmsk.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_whistle_noresize_cls11_median_inverse.py  solov2_r50_fpn_ms-3x_whistle.py  solov2_r50_fpn_ms-3x_whistle_median.py
mmdetection/demo/: image_demo.py
mmdetection/tools/: test.py
notebooks/: spec_img.ipynb
scripts/: eval_mm.sh
tests/data/: audio_data.py  data_quality.py  test_spec_img.py
tests/test_utils/: test_annotation.py  test_audio.py
whistle_prompter/datasets/: data_quality.py  data_stats.py  prepare_spec_img.py  visual.py  whistle_datasets.py
whistle_prompter/utils/: __init__.py  (+2 more)
(+19 files in other folders)
