[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "whistle_prompter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision",
    "transformers",
    "einops",
    "peft",
    "scikit-image",
    "tensorboard",
]

[tool.setuptools]
packages = ["whistle_prompter"]